--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,14 @@
 platform = atmelavr
 board = ATmega328P
 framework = arduino
+
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
+
+; change microcontroller
+board_build.mcu = atmega328p
+
+; change MCU frequency
+board_build.f_cpu = 16000000L
